@startuml CardOverview
title Overview Card & Deck

skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classFontStyle Bold
skinparam classAttributeFontSize 12

enum ChanceType {
    GO_TO_NEAREST_STATION
    MOVE_BACK_3
    GO_TO_JAIL
}

enum CommunityType {
    BIRTHDAY
    DOCTOR_FEE
    CAMPAIGN_FEE
}

enum CardCategory {
    CHANCE
    COMMUNITY
    SKILL
}

abstract class Card {
    # description : string
    --
    + getDescription() : string
    + {abstract} getCardName() : string
    + {abstract} getCategory() : CardCategory
    + {abstract} clone() : Card*
}

abstract class ActionCard {
    --
    + {abstract} getCategory() : CardCategory
    + {abstract} clone() : Card*
}

abstract class SkillCard {
    # remainingUses : int
    --
    + getCategory() : CardCategory
    + isUsable() : bool
    + {abstract} getCardName() : string
    + {abstract} clone() : Card*
}

class CardDeck<T> {
    - drawPile : vector<T*>
    - discardPile : vector<T*>
    --
    + draw() : T*
    + discard(card : T*) : void
    + shuffle() : void
    + reshuffleIfEmpty() : void
    + isEmpty() : bool
    + size() : int
}

package "Action Card" {
    class ChanceCard {
        - type : ChanceType
        --
        + getCardName() : string
        + getCategory() : CardCategory
        + getType() : ChanceType
        + clone() : Card*
    }

    class CommunityChestCard {
        - type : CommunityType
        --
        + getCardName() : string
        + getCategory() : CardCategory
        + getType() : ChanceType
        + clone() : Card*
    }
}

package "Skill Card" {
    class MoveCard {
        - steps : int
        --
        + getCardName() : string
        + getSteps() : int
        + clone() : Card*
    }

    class DiscountCard {
        - discountPercent : int
        - duration : int
        --
        + getCardName() : string
        + getDiscount() : int
        + decrementDuration() : void
        + clone() : Card*
    }

    class ShieldCard {
        - duration : int
        --
        + getCardName() : string
        + decrementDuration() : void
        + clone() : Card*
    }

    class TeleportCard {
        --
        + getCardName() : string
        + clone() : Card*
    }

    class LassoCard {
        --
        + getCardName() : string
        + clone() : Card*
    }

    class DemolitionCard {
        --
        + getCardName() : string
        + clone() : Card*
    }
}

Card <|-- ActionCard
Card <|-- SkillCard
ActionCard <|-- ChanceCard
ActionCard <|-- CommunityChestCard
SkillCard <|-- MoveCard
SkillCard <|-- DiscountCard
SkillCard <|-- ShieldCard
SkillCard <|-- TeleportCard
SkillCard <|-- LassoCard
SkillCard <|-- DemolitionCard

CardDeck "1" o-- "0..*" Card : aggregates

ChanceCard ..> ChanceType : uses
CommunityChestCard ..> CommunityType : uses
Card ..> CardCategory : uses

@enduml